--- a/index.html
+++ b/index.html
@@ -4,39 +4,47 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Derish Associates Private Investigators</title>
-    <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <script src="js/vendor/modernizr.js"></script>
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="http://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   </head>
   <body>
 
-    <div class="columns small-12 header text-center">
-      <h1><img src="img/transparent-d.png" id="logo">Derish Associates, Inc</h1>
-      <h1 class="subheader" id="subtitle">"Serving all the Americas"</h1>
+
+    <div class="row header">
+      <div class="columns small-1 logo-div">
+        <img src="img/transparent-d.png" id="logo">
+      </div>
+      <div class="columns small-centered small-5 text-center">
+        <h1>Derish Associates, Inc</h1>
+        <h1 class="subheader" id="subtitle">"Serving all the Americas"</h1>
+      </div>
     </div>
 
-    <div class="row">
+    <div class="row body-top transparent">
       <div class="columns small-12"><br>
         <h2>Professional Services</h2>
         <h2 class="subheader">There are times when you need confidential information – and it must be fast, reliable and professionally delivered.</h2>
 
         <p>At Derish Associates, we guarantee our best efforts to get you that information. We are an independent local investigative and consulting agency with offices in both North and Central America. Combining over 50 years of investigative experience with active participation in both national and international associations, we can provide you a truly global product with a personal touch.</p>
       </div>
+    </div>
 
+    <div class="row body-middle transparent">
       <div class="columns small-12">
-        <hr></hr>
         <h2>About Us</h2>
         <h2 class="subheader">Over 55 years combined experience</h2>
         <p><strong>Mary Josepha Nikas</strong> has been a private investigator for over 15 years, both as a manager and as the owner of her own investigative firm. She comes from a background in both the real estate and financial industries prior to entering the investigative industry in 1993. She has an uncanny ability to accumulate and analyze massive amounts of data and produce a concise, detailed report for a winning strategy.</p>
 
         <p><strong>Seth Derish</strong> is a San Francisco native whose work as a private investigator is internationally recognized. When first licensed in California in 1978, many thought he was the youngest licensed investigator in the state’s history as at the time he was only 24 years old. He has worked for most major law firms and financial institutions in Northern California and his current clientele spans the globe. If he cannot answer your questions, he will find someone who can.</p>
       </div>
+    </div>
 
 
+    <div class="row body-middle transparent">
       <div class="columns small-12 small-text-left medium-text-center">
-        <hr></hr>
         <h2>Contact Us</h2>
         <h2 class="subheader">Call today for a free quote</h2>
       </div>
