--- a/index.html
+++ b/index.html
@@ -12,33 +12,32 @@
   </head>
   <body>
 
-
     <div class="row header">
-      <div class="columns small-1 logo-div">
-        <img src="img/transparent-d.png" id="logo">
-      </div>
-      <div class="columns small-centered small-5 text-center">
-        <h1>Derish Associates, Inc</h1>
-        <h1 class="subheader" id="subtitle">"Serving all the Americas"</h1>
+      <div class="columns small-centered small-12 text-center">
+        <div class="header-text">
+          <h1>Derish Associates, Inc</h1>
+          <h1 class="subheader" id="subtitle">"Serving all the Americas"</h1>
+        </div>
       </div>
     </div>
 
     <div class="row body-top transparent">
       <div class="columns small-12"><br>
         <h2>Professional Services</h2>
-        <h2 class="subheader">There are times when you need confidential information – and it must be fast, reliable and professionally delivered.</h2>
 
-        <p>At Derish Associates, we guarantee our best efforts to get you that information. We are an independent local investigative and consulting agency with offices in both North and Central America. Combining over 50 years of investigative experience with active participation in both national and international associations, we can provide you a truly global product with a personal touch.</p>
+        <p>There are times when you need confidential information – and it must be fast, reliable and professionally delivered. We have over 35 years of experience providing law firms, financial institutions and insurance companies with a proven and reliable product. Though we are a home-grown San Francisco firm our reach is both national and global through our branch offices and regular attendance at both national and international conferences.</p>
+
+        <p>Our experience pays off. We go beyond ordinary sources of raw data and not only dig deep with both public and proprietary databases, but also use our network of human sources to provide the client with a well-thought-out, analytical report that is concise and detailed. In addition, we still actually talk to regular folk to provide the human intelligence so desperately lacking in today’s fast-paced technologically driven information marketplace.</p>
       </div>
     </div>
 
     <div class="row body-middle transparent">
       <div class="columns small-12">
         <h2>About Us</h2>
-        <h2 class="subheader">Over 55 years combined experience</h2>
-        <p><strong>Mary Josepha Nikas</strong> has been a private investigator for over 15 years, both as a manager and as the owner of her own investigative firm. She comes from a background in both the real estate and financial industries prior to entering the investigative industry in 1993. She has an uncanny ability to accumulate and analyze massive amounts of data and produce a concise, detailed report for a winning strategy.</p>
+        <h2 class="subheader">Over 60 years combined experience</h2>
+        <p><strong>Mary Josepha Nikas</strong> has been a private investigator for over 20 years, both as a manager and as the owner of her own investigative firm. She comes from a background in both the real estate and financial industries prior to entering the investigative industry in 1993. She has an uncanny ability to accumulate and analyze massive amounts of data and produce a concise, detailed report for a winning strategy.</p>
 
-        <p><strong>Seth Derish</strong> is a San Francisco native whose work as a private investigator is internationally recognized. When first licensed in California in 1978, many thought he was the youngest licensed investigator in the state’s history as at the time he was only 24 years old. He has worked for most major law firms and financial institutions in Northern California and his current clientele spans the globe. If he cannot answer your questions, he will find someone who can.</p>
+        <p><strong>Seth Derish</strong> is a San Francisco native whose work as a private investigator is internationally recognized. When first licensed in California in 1978 many thought he was the youngest licensed investigator in the state’s history, as at the time he was only 24 years old. He has worked for most major law firms and financial institutions in Northern California and his current clientele spans the globe. If he cannot answer your questions, he will find someone who can.</p>
       </div>
     </div>
 
@@ -46,25 +45,27 @@
     <div class="row body-middle transparent">
       <div class="columns small-12 small-text-left medium-text-center">
         <h2>Contact Us</h2>
-        <h2 class="subheader">Call today for a free quote</h2>
+        <h2 class="subheader">Call today for a free quote or consulation</h2>
       </div>
-      <div class="columns small-12 medium-4 text-left">
-        <h3>U.S. Domestic Investigations</h3>
-        <p>Mary Josepha Nikas<br>
-          (415) 459-1448<br>
-          US-Inv@PrivateEyes.com</p>
-      </div>
-      <div class="columns small-12 medium-4 text-left">
-        <h3>International Investigations</h3>
-        <p>Seth Derish<br>
-          (415) 648-7007<br>
-          Derish@PrivateEyes.com</p>
-      </div>
-      <div class="columns small-12 medium-4 text-left">
-        <h3>Mailing Address</h3>
-        <p>Derish Associates, Inc.<br>
-          1770 Post Street, Suite 151<br>
-          San Fransico, California 94115</p>
+      <div class="addresses">
+        <div class="columns small-12 medium-4 text-left padding-left">
+          <h3>U.S. Domestic Investigations</h3>
+          <p>Mary Josepha Nikas<br>
+            (415) 459-1448<br>
+            US-Inv@PrivateEyes.com</p>
+        </div>
+        <div class="columns small-12 medium-4 text-left">
+          <h3>International Investigations</h3>
+          <p>Seth Derish<br>
+            (415) 648-7007<br>
+            Derish@PrivateEyes.com</p>
+        </div>
+        <div class="columns small-12 medium-4 text-left">
+          <h3>Mailing<br> Address</h3>
+          <p>Derish Associates, Inc.<br>
+            1770 Post Street, Suite 151<br>
+            San Francisco, California 94115</p>
+        </div>
       </div>
     </div>
 
