--- a/index.html
+++ b/index.html
@@ -1,87 +1,109 @@
 <!doctype html>
 <html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Derish Associates Private Investigators</title>
-    <link rel="stylesheet" href="css/foundation.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link href="http://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  </head>
-  <body>
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Derish Associates Private Investigators</title>
+	<link rel="stylesheet" href="css/foundation.min.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link href="http://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+</head>
+<body>
 
-    <div class="row header">
-      <div class="columns small-centered small-12 text-center">
-        <div class="header-text">
-          <h1>Derish Associates, Inc</h1>
-          <h1 class="subheader" id="subtitle">"Serving all the Americas"</h1>
-        </div>
-      </div>
-    </div>
+<!-- Sticky header -->
+	<div class="row header">
+		<div class="columns small-centered small-12 text-center">
+			<div class="header-text">
+				<h1>Derish Associates, Inc</h1>
+				<h1 class="subheader" id="subtitle">"Serving all the Americas"</h1>
+			</div>
+		</div>
+	</div>
+<!-- end header -->
 
-    <div class="row body-top transparent">
-      <div class="columns small-12"><br>
-        <h2>Professional Services</h2>
+<!-- Body begin -->
+<!-- Each body 'tile' has it's own class: body-top -middle and -bottom, each has unique margin requirements -->
+<!-- First body section -->
+	<div class="row body-top transparent">
+		<div class="columns small-12"><br>
+		<h2>Professional Services</h2>
+		<p>There are times when you need confidential information – and it must be fast, reliable and professionally delivered. We have over 35 years of experience providing law firms, financial institutions and insurance companies with a proven and reliable product. Though we are a home-grown San Francisco firm our reach is both national and global through our branch offices and regular attendance at both national and international conferences.</p>
+		<p>Our experience pays off. We go beyond ordinary sources of raw data and not only dig deep with both public and proprietary databases, but also use our network of human sources to provide the client with a well-thought-out, analytical report that is concise and detailed. In addition, we still actually talk to regular folk to provide the human intelligence so desperately lacking in today’s fast-paced technologically driven information marketplace.</p>
+		</div>
+	</div>
+<!-- end first section -->
 
-        <p>There are times when you need confidential information – and it must be fast, reliable and professionally delivered. We have over 35 years of experience providing law firms, financial institutions and insurance companies with a proven and reliable product. Though we are a home-grown San Francisco firm our reach is both national and global through our branch offices and regular attendance at both national and international conferences.</p>
+<!-- Middle body section 1 -->
+<!-- To add more sections in the middle, copy this stuff -->
+	<div class="row body-middle transparent">
+		<div class="columns small-12">
+		<h2>About Us</h2>
+		<h2 class="subheader">Over 60 years combined experience</h2>
+		<p><strong>Mary Josepha Nikas</strong> has been a private investigator for over 20 years, both as a manager and as the owner of her own investigative firm. She comes from a background in both the real estate and financial industries prior to entering the investigative industry in 1993. She has an uncanny ability to accumulate and analyze massive amounts of data and produce a concise, detailed report for a winning strategy.</p>
+		<p><strong>Seth Derish</strong> is a San Francisco native whose work as a private investigator is internationally recognized. When first licensed in California in 1978 many thought he was the youngest licensed investigator in the state’s history, as at the time he was only 24 years old. He has worked for most major law firms and financial institutions in Northern California and his current clientele spans the globe. If he cannot answer your questions, he will find someone who can.</p>
+		</div>
+	</div>
+<!-- End middle section 1 -->
 
-        <p>Our experience pays off. We go beyond ordinary sources of raw data and not only dig deep with both public and proprietary databases, but also use our network of human sources to provide the client with a well-thought-out, analytical report that is concise and detailed. In addition, we still actually talk to regular folk to provide the human intelligence so desperately lacking in today’s fast-paced technologically driven information marketplace.</p>
-      </div>
-    </div>
+<!-- Bottom section -->
+	<div class="row body-bottom transparent small-text-left medium-text-center">
+		<div class="columns small-12">
+			<h2>Contact Us</h2>
+			<h2 class="subheader">Call Today for a Free Quote or Consulaltion</h2>
+		</div>
+		<div class="columns small-12 medium-6">
+			<p><strong>U.S. Domestic Investigations</strong><br>
+			<strong>Mary Nikas</strong><br>
+			(415) 459-1449<br>
+			US-Inv@PrivateEyes.com</p>
+		</div>
+		<div class="columns small-12 medium-6">
+			<p><strong>International Investigations</strong><br>
+			<strong>Seth Derish</strong><br>
+			(415) 648-7007<br>
+			Derish@PrivateEyes.com</p>
+		</div>
+		<div class="columns small-12">
+			<h3>Office Addresses</h3>
+		</div>
+		<div class="columns small-12 medium-4">
+			<p><strong>Derish Associates, Inc.</strong><br>
+			1770 Post Street, Suite 151<br>
+			San Francisco, California 94115<br>
+			Office: (415) 549-1448</p>
+		</div>
+		<div class="columns small-12 medium-4">
+			<p><strong>Willamette Valley Enterprises</strong><br>
+			4676 Commercial Street SE, #176<br>
+			Salem, Oregon 93702<br>
+			Office: (503) 585-4747</p>
+		</div>
+		<div class="columns small-12 medium-4">
+			<p><strong>Costa Rica Investigations, S.A.</strong><br>
+			San Jose, Costa Rica<br>
+			CR-Inv@PrivateEyes.com<br>
+			U.S. Toll Free: (415) 648-7007</p>
+		</div>
+	</div>
+<!-- end bottom section -->
 
-    <div class="row body-middle transparent">
-      <div class="columns small-12">
-        <h2>About Us</h2>
-        <h2 class="subheader">Over 60 years combined experience</h2>
-        <p><strong>Mary Josepha Nikas</strong> has been a private investigator for over 20 years, both as a manager and as the owner of her own investigative firm. She comes from a background in both the real estate and financial industries prior to entering the investigative industry in 1993. She has an uncanny ability to accumulate and analyze massive amounts of data and produce a concise, detailed report for a winning strategy.</p>
+<!-- Footer begins -->
+	<div class="small-12 columns footer text-center"><br>
+		<p>Content copyright 2015. Derish Associates, Inc. All rights reserved.</p>
+		<ul>
+		<li>California P.I. 12656</li>
+		<li>Oregon P.I. 33709</li>
+		<li>Costa Rica I.D. 3-101-239-587</li>
+		</ul>
+	</div>
+<!-- footer ends -->
 
-        <p><strong>Seth Derish</strong> is a San Francisco native whose work as a private investigator is internationally recognized. When first licensed in California in 1978 many thought he was the youngest licensed investigator in the state’s history, as at the time he was only 24 years old. He has worked for most major law firms and financial institutions in Northern California and his current clientele spans the globe. If he cannot answer your questions, he will find someone who can.</p>
-      </div>
-    </div>
-
-
-    <div class="row body-middle transparent">
-      <div class="columns small-12 small-text-left medium-text-center">
-        <h2>Contact Us</h2>
-        <h2 class="subheader">Call today for a free quote or consulation</h2>
-      </div>
-      <div class="addresses">
-        <div class="columns small-12 medium-4 text-left padding-left">
-          <h3>U.S. Domestic Investigations</h3>
-          <p>Mary Josepha Nikas<br>
-            (415) 459-1448<br>
-            US-Inv@PrivateEyes.com</p>
-        </div>
-        <div class="columns small-12 medium-4 text-left">
-          <h3>International Investigations</h3>
-          <p>Seth Derish<br>
-            (415) 648-7007<br>
-            Derish@PrivateEyes.com</p>
-        </div>
-        <div class="columns small-12 medium-4 text-left">
-          <h3>Mailing<br> Address</h3>
-          <p>Derish Associates, Inc.<br>
-            1770 Post Street, Suite 151<br>
-            San Francisco, California 94115</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="small-12 columns footer text-center"><br>
-      <p>Content copyright 2015. Derish Associates, Inc. All rights reserved.</p>
-      <ul>
-        <li>California P.I. 12656</li>
-        <li>Oregon P.I. 33709</li>
-        <li>Costa Rica I.D. 3-101-239-587</li>
-      </ul>
-    </div>
-    
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
-  </body>
+	<script src="js/vendor/jquery.js"></script>
+	<script src="js/foundation.min.js"></script>
+	<script>
+		$(document).foundation();
+	</script>
+</body>
 </html>
